--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <address class="contacts-menu">
             <ul class="contacts-list-mobile">
               <li class="contacts-item-mobile">
-                <a href="tel:+110001111111" class="contacts-link-mobile"></a>
+                <a href="tel:+110001111111" class="address-link-tel"></a>
                   +11 (000) 111-11-11</a
                 >
               </li>
