--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </svg>
           </button>
           <nav class="mobile-menu-nav">
-            <ul class="nav-list-mabile">
+            <ul class="nav-list-mobile">
               <li class="nav-item-mobile">
                 <a class="nav-link-mobile current" href="./index.html"
                   >Studio</a
