--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </nav>
           <address class="contacts-menu">
             <ul class="contacts-list-mobile">
-              <li class="contacts-item-mobile">
+              <li class="contacts-list-mobile">
                 <a href="tel:+110001111111" class="address-link-tel">
                   +11 (000) 111-11-11</a
                 >
